can push and pull data to and from the server

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="/styles/main.sass.css">
+	<!--**********Fonts**********-->
+	<!-- font-family: 'Titillium Web', sans-serif; -->
+	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,700,200,300' rel='stylesheet' type='text/css'>
+	<!-- **********Icons********** -->
 </head>
 <body>
 
 <nav id="nav"></nav>
+<main id="main"></main>
+<footer id="footer"></footer>
 
 <script src="//www.parsecdn.com/js/parse-1.6.5.min.js"></script>
 <script type="text/javascript" src="/scripts/bundle.js"></script>
